Fix for "Tasks screen. Edit event. Open date chooser popup. Week day names and a lot of numbers are not visible."
git-svn-id: http://svn-new/TeamDev/OpenFaces/trunk@326 7826287f-d7cb-499f-91f0-9f45672cc948

--- a/compatibilityDemo/WebContent/css/style.css
+++ b/compatibilityDemo/WebContent/css/style.css
@@ -47,3 +47,6 @@ a img{
 .clear{ clear:both; }
 .relative{	position:relative; }
 .thin{	font-weight:normal; }
+
+
+table.rich-calendar-popup td {color:black;}
